# MuST-C

./: README.md  requirements.txt
UAV3-MS/: convert_DNs_to_radiance.py  convert_radiance_to_reflectance_orthos.py
assets/UGV_area/: UGV_area.shp  UGV_area.shx  UGV_area2.dbf  UGV_area2.qmd  UGV_area2.shp  UGV_area2.shx
dev_kit/: README.md  data.csv  extract_data.py  get_dates_by_plots.py  get_images_for_a_plot.py  get_plot_data.py  get_vegetation_indices_ms.py  poi.csv  pyproject.toml  requirements.txt  setup.py
dev_kit/utils/: graph_dicts.py  id_mapper.py  map_ids.csv  sowing_dates.py
download_scripts/: LAI_biomass_and_metadata.txt  README.md  images_UAV1-RGB.txt  images_UAV2-RGB.txt  images_UAV3-MS.txt  images_UAV3-RGB.txt  images_UGV-RGB.txt  plot-wise_UAV1-RGB.txt  plot-wise_UAV2-Lidar_UAV2-RGB_UAV3-MS_UAV3-RGB_UGV-Ouster.txt  plot-wise_UGV-LMI.txt  plot-wise_UGV-RGB.txt  plot-wise_all.txt  point_clouds_UAV1-RGB.txt  point_clouds_UAV1.txt  point_clouds_UAV2-Lidar.txt  point_clouds_UGV-LMI.txt  point_clouds_UGV-Ouster.txt  raster-data_UAV2-RGB.txt  raster-data_UAV3-RGB.txt  raster_data_UAV1-RGB.txt  raster_data_UAV3-MS.txt
md_Destructive_LAI/: README.md  calibration_board_one_dir.py  crop_and_threshold.py  generate_veg_mask.py  image_preprocessing.py  process_images.py  requirements.txt  tracker.py  utils.py
md_Destructive_LAI/data/: calib.txt  calibration.yaml  cmd_args.txt  tracker_hyps.cfg
plot_graphs_from_paper/: README.md  merge_lais_n_biomass.py  plot_biomass.py  plot_des_lai.py  plot_r2.py  plot_sunscan.py  requirements.txt
(+2 files in other folders)
